--- a/index.html
+++ b/index.html
@@ -17,40 +17,42 @@ $(document).ready(function() {
 </script>
 
 <head>
-<h1 class="title-text text-center animated jello">Yikai Kuo</h1>
-<p class="text-center title-text" id="titleSub"> [I used to animate]</p>
+<h1 class="title-text text-center" id="bigTitle">Yikai Kuo</h1>
+<p class="text-center title-text" id="titleSub"> <b>I           animate   :)</b></p>
 <body>
   <div class="text-center">
     <div class="container">
       <div class="row">
-        <div class="col-xs-4"></div>
-        <div class="col-xs-4">
-          <h2 class="bioMargin text-center"> Greetings! I'm a third year student at Northeastern University working towards a B.S. in Biology and Computer Science with a possible minor in animation. PLEASE KILL ME NOW</h2>
-          <p>or you can look at my animations if you want idk</p>
+        <div class="col-xs-6"></div>
+        <div class="col-xs-7">
+          <h2 class="bioMargin text-center"> Greetings! I'm a third year student at Northeastern University working towards a B.S. in Biology and Computer Science with a possible minor in animation.  I pursue animation as a pass time, and hope to combine it with my academic work to create interactive user experiences.  </h2>
+          
           <br>
           <br>
           <p class= "text-center underline">---------------------------------------------------<p>
+            <p id="shyText">Poorly Aligned Animation Work</p>
           </div>
         </div>
         <div class="row">
           <div id="left" class="col-md-4" align="center">
             <h3></h3>
             <img id="botFace" class="botFace animated bounce" src="http://68.media.tumblr.com/0aaa2b20b15bdefba3425c2db66d2752/tumblr_o22g8yCGD11tk9o89o1_500.gif"></img>
-            <p class="descrp">botface</p>
+            <p class="descrp">botFace</p>
           </div>
           <div class="col-md-4"></div>
           <div class="col-md-4" align="center">
-            <img id="whippo" width="450" src="http://68.media.tumblr.com/f46e3e24dade5901b3cd19e76754ab50/tumblr_ndf89vNt1V1tk9o89o1_1280.gif"></img>
-            <p class= "descrp">whippo</p>
+          <img id="bang" src="http://68.media.tumblr.com/6be98caf3314dbb0eece43d6c8ab471d/tumblr_ndf0figX551tk9o89o1_1280.gif"></img>
+            <p class= "descrp">bangbangbang</p>
+            
           </div>
           <div class="col-md-4" align="center" >
-            <img id="bang" src="http://68.media.tumblr.com/6be98caf3314dbb0eece43d6c8ab471d/tumblr_ndf0figX551tk9o89o1_1280.gif"></img>
-            <p class= "descrp">bangbangbang</p>
+            <img id="whippo" width="450" src="http://68.media.tumblr.com/f46e3e24dade5901b3cd19e76754ab50/tumblr_ndf89vNt1V1tk9o89o1_1280.gif"></img>
+            <p class= "descrp">Sketches</p>
           </div>
           <div class="col-md-3"></div>
           <div class= "col-md-4" align="center">
             <img id="catcho" src="https://orig11.deviantart.net/9ebf/f/2016/260/7/7/whatt_by_neon_fluidanims-dai01ud.gif"></img>
-            <p class= "descrp">catcho</p>
+            <p class= "descrp">Catch em?</p>
           </div>
         </div>
       </div>
