--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <img id="botFace" class="botFace animated bounce" src="http://68.media.tumblr.com/0aaa2b20b15bdefba3425c2db66d2752/tumblr_o22g8yCGD11tk9o89o1_500.gif"></img>
                         <p class="descrp">botFace</p>
                     </div>
-                    <div class="col-sm-4"></div>
+                    <div class="col-sm-3"></div>
                     <div class="col-sm-4" align="center">
                         <img id="bang" src="http://68.media.tumblr.com/6be98caf3314dbb0eece43d6c8ab471d/tumblr_ndf0figX551tk9o89o1_1280.gif"></img>
                         <p class="descrp">bangbangbang</p>
@@ -51,7 +51,7 @@
                         <p class="descrp">Sketches</p>
                     </div>
                     <div class="col-sm-3"></div>
-                    <div class="col-sm-4" align="center">
+                    <div id ="catchEm" class="col-sm-4" align="center">
                         <img id="catcho" src="https://orig11.deviantart.net/9ebf/f/2016/260/7/7/whatt_by_neon_fluidanims-dai01ud.gif"></img>
                         <p class="descrp">Catch em?</p>
                     </div>
