--- a/weather/weather.html
+++ b/weather/weather.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<script src="jquery-3.2.1.js" type="text/javascript"></script>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 <script src="weatherJS.js" type="text/javascript"></script>
-<link type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet"></link>
+<link type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
 <link type="text/css" href="weatherCSS.css" rel="stylesheet"></link>
 <head>
 	 <meta charset="UTF-8">
