--- a/Stream-Checker/TwitchStreamCheck.html
+++ b/Stream-Checker/TwitchStreamCheck.html
@@ -4,19 +4,20 @@
 <script src="twitchTestJS.js" type="text/javascript"></script>
 <link type="text/css" href="twitchTestCSS.css" rel="stylesheet"  ></link>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></link>
-
-
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
 
 
 <body align="center">
-
     <div class="row title">
+      <div class="col-xs-1"></div>
+      <div align="center" class="col-xs-10">
         <h1 id="shit">Type in a user to see if they're live!</h1>
         <form onsubmit="return false"><input id="lom" type="text" name="username"></form>
         <button class="btn">:)</button>
         <p id="liveCheck"></p>
+      </div>
+      <div class="col-xs-1"></div>
     </div>
 
     
