--- a/Stream-Checker/TwitchStreamCheck.html
+++ b/Stream-Checker/TwitchStreamCheck.html
@@ -21,28 +21,29 @@
     </div>
 
     
+<div class="container-fluid">
+  <div class="row">
+        <div class="col-md-4 xs-hidden col-sm-2"></div>
 
-  <!-- <div class="row">
-        <div class="col-md-4"></div>
-
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-12 col-sm-8">
             <div class="row backgroundDiv">
-                <div id="profPicDiv" class="col-md-1">
+                <div id="profPicDiv" class="col-md-1 col-xs-1">
                     <img id="profPic" src="https://static-cdn.jtvnw.net/jtv_user_pictures/vgbootcamp-profile_image-2d7c9dd9b19b8c44-300x300.png" width="60px" />
                 </div>
-                <div class="userDiv col-md-8">                   
+                <div class="userDiv col-md-8 col-xs-7">                   
                     <p id="userText"><strong>mang0</strong></p>
                 </div>
-                <div class="twitchIconDiv col-md-1">
+                <div class="twitchIconDiv col-md-1 col-xs-1">
                     <img width="60px" id="twitchIcon" src="https://cdn1.iconfinder.com/data/icons/simple-icons/2048/twitch-2048-black.png"></img>
                 </div>
-                <div class="indicator col-md-1"><p id="status"><strong>live<strong><p></div>
+                <div class="indicator col-md-1 col-xs-1"><p id="status"><strong>live<strong><p></div>
 
             </div> 
 
         </div> 
     </div>
--->
+</div>
+
 </body>
 
 </html>
