--- a/Stream-Checker/TwitchStreamCheck.html
+++ b/Stream-Checker/TwitchStreamCheck.html
@@ -14,7 +14,7 @@
       <div align="center" class="col-xs-10">
         <h1 id="shit">Type in a user to see if they're live!</h1>
         <form onsubmit="return false"><input id="lom" type="text" name="username"></form>
-        <button class="btn">:)</button>
+        <button class="btn">:)  :)</button>
         <p id="liveCheck"></p>
       </div>
       <div class="col-xs-1"></div>
