--- a/Stream-Checker/TwitchStreamCheck.html
+++ b/Stream-Checker/TwitchStreamCheck.html
@@ -25,7 +25,7 @@
   <div class="row">
         <div class="col-md-4 xs-hidden col-sm-2"></div>
 
-        <div class="col-md-4 col-xs-12 col-sm-8">
+        <div class="col-md-4 col-xs-12">
             <div class="row backgroundDiv">
                 <div id="profPicDiv" class="col-md-1 col-xs-1">
                     <img id="profPic" src="https://static-cdn.jtvnw.net/jtv_user_pictures/vgbootcamp-profile_image-2d7c9dd9b19b8c44-300x300.png" width="60px" />
