--- a/Stream-Checker/TwitchStreamCheck.html
+++ b/Stream-Checker/TwitchStreamCheck.html
@@ -31,15 +31,16 @@
                     <div class="noPic"></div>
                     <!--<img id="profPic" src="https://static-cdn.jtvnw.net/jtv_user_pictures/vgbootcamp-profile_image-2d7c9dd9b19b8c44-300x300.png" width="60px" /> -->
                 </div>
-                <div class="userDiv col-md-8 col-xs-7">                   
-                    <p id="userText"><strong>asjdfalksjdf;alksjdf;laskjfl;sdkj</strong></p>
+                <div class="userDiv col-md-8 col-xs-6">                   
+                    <p id="userText"><strong>mang0</strong></p>
                 </div>
                 <div class="twitchIconDiv col-md-1 col-xs-1">
-                    <img width="60px" id="twitchIcon" src="https://cdn1.iconfinder.com/data/icons/simple-icons/2048/twitch-2048-black.png"></img>
+                    <img id="twitchIcon" src="https://cdn1.iconfinder.com/data/icons/simple-icons/2048/twitch-2048-black.png"></img>
                 </div>
                 <div class="indicator col-md-1 col-xs-1"><p id="status"><strong>live<strong><p></div>
 
             </div> 
+            <div class="col-xs-1"></div>
 
         </div> 
     </div>
