--- a/Stream-Checker/TwitchStreamCheck.html
+++ b/Stream-Checker/TwitchStreamCheck.html
@@ -32,7 +32,7 @@
                     <!--<img id="profPic" src="https://static-cdn.jtvnw.net/jtv_user_pictures/vgbootcamp-profile_image-2d7c9dd9b19b8c44-300x300.png" width="60px" /> -->
                 </div>
                 <div class="userDiv col-md-8 col-xs-6">                   
-                    <p id="userText"><strong>mang0</strong></p>
+                    <p id="userText"><strong>jihgagraafoiiojhagiogawoijagioagwoi;aw</strong></p>
                 </div>
                 <div class="twitchIconDiv col-md-1 col-xs-1">
                     <img id="twitchIcon" src="https://cdn1.iconfinder.com/data/icons/simple-icons/2048/twitch-2048-black.png"></img>
