--- a/Stream-Checker/TwitchStreamCheck.html
+++ b/Stream-Checker/TwitchStreamCheck.html
@@ -12,7 +12,7 @@
     <div class="row title">
       <div class="col-xs-1"></div>
       <div align="center" class="col-xs-10">
-        <h1 id="shit">Type in a user to see if they're live!</h1>
+        <h1 id="shit">Enter a stream to see if they're broadcasting!</h1>
         <form onsubmit="return false"><input id="lom" type="text" placeholder= "streamer input" name="username"></form>
         <button id="button" class="btn">:)</button>
         <p id="liveCheck"></p>
@@ -21,7 +21,7 @@
     </div>
 
     
-<div class="container-fluid">
+<!--<div class="container-fluid">
   <div class="row">
         <div class="col-md-3 col-lg-4  col-xs-1 col-sm-3"></div>
 
@@ -29,7 +29,6 @@
             <div class="row backgroundDiv">
                 <div id="profPicDiv" class="col-md-1 col-xs-1">
                     <div class="noPic"></div>
-                    <!--<img id="profPic" src="https://static-cdn.jtvnw.net/jtv_user_pictures/vgbootcamp-profile_image-2d7c9dd9b19b8c44-300x300.png" width="60px" /> -->
                 </div>
                 <div class="userDiv col-md-8 col-xs-6">                   
                     <p id="userText"><strong>jihgagraafoiiojhagiogawoijagioagwoi;aw</strong></p>
@@ -45,6 +44,7 @@
         </div> 
     </div>
 </div>
+-->
 
 </body>
 </html>
