--- a/Stream-Checker/TwitchStreamCheck.html
+++ b/Stream-Checker/TwitchStreamCheck.html
@@ -12,7 +12,7 @@
     <div class="row title">
       <div class="col-xs-1"></div>
       <div align="center" class="col-xs-10">
-        <h1 id="shit">Enter a stream to see if they're broadcasting!</h1>
+        <h1 id="shit">Enter a streamer to see if they're broadcasting!</h1>
         <form onsubmit="return false"><input id="lom" type="text" placeholder= "streamer input" name="username"></form>
         <button id="button" class="btn">:)</button>
         <p id="liveCheck"></p>
