--- a/Stream-Checker/TwitchStreamCheck.html
+++ b/Stream-Checker/TwitchStreamCheck.html
@@ -20,8 +20,8 @@
       <div class="col-xs-1"></div>
     </div>
 
-    
-<!--<div class="container-fluid">
+<!--
+<div class="container-fluid">
   <div class="row">
         <div class="col-md-3 col-lg-4  col-xs-1 col-sm-3"></div>
 
@@ -33,7 +33,9 @@
                 <div class="userDiv col-md-8 col-xs-6">                   
                     <p id="userText"><strong>jihgagraafoiiojhagiogawoijagioagwoi;aw</strong></p>
                 </div>
-                <div class="twitchIconDiv col-md-1 col-xs-1">
+                <div id="mang0" class="twitchIconDiv col-md-1 col-xs-1">
+                    <input onclick="window.open('http://www.google.com', '_blank')" type="image" src="https://cdn1.iconfinder.com/data/icons/simple-icons/2048/twitch-2048-black.png" 
+                      class="btTxt submit link" id="twitchIcon" />
                     <img id="twitchIcon" src="https://cdn1.iconfinder.com/data/icons/simple-icons/2048/twitch-2048-black.png"></img>
                 </div>
                 <div class="indicator col-md-1 col-xs-1"><p id="status"><strong>live<strong><p></div>
@@ -44,7 +46,8 @@
         </div> 
     </div>
 </div>
--->
+--> 
+
 
 </body>
 </html>
