--- a/Stream-Checker/TwitchStreamCheck.html
+++ b/Stream-Checker/TwitchStreamCheck.html
@@ -7,7 +7,9 @@
 <link rel="icon" type="image/png" href="https://cdn1.iconfinder.com/data/icons/micon-social-pack/512/twitch-128.png"/>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
-
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="-1" />
 
 <body align="center">
     <div class="row title">
