--- a/Stream-Checker/TwitchStreamCheck.html
+++ b/Stream-Checker/TwitchStreamCheck.html
@@ -22,7 +22,7 @@
       </div>
       <div class="col-xs-1"></div>
     </div>
-
+<div id="boxes">
 <!--
 <div class="container-fluid">
   <div class="row">
@@ -51,6 +51,6 @@
 </div>
 --> 
 
-
+</div>
 </body>
 </html>
