--- a/aboutMe.html
+++ b/aboutMe.html
@@ -126,7 +126,7 @@
             minor in <strong>Computer Science</strong></em>.</p>
             <p id="interests">I'm currently channeling my background in hand-drawn character animation towards learning <em>design/UI/UX</em>. I also dabble in <em>gene editing</em>, and have worked with two different gene editing teams
                 at <strong>Editas Medicine</strong> and <strong>bluebird bio</strong>.</p>
-            <p id="contact"><a href="https://www.linkedin.com/in/yikai-kuo-90174a126/" target="_blank">linkedin</a> // <a href="https://github.com/KwhoaKai" target="_blank">github</a> // kuo.e@husky.neu.edu</p>
+            <p id="contact"><a href="https://www.linkedin.com/in/yikai-kuo-90174a126/" target="_blank"><u>linkedin</u></a> // <a href="https://github.com/KwhoaKai" target="_blank"><u>github</u></a> // kuo.e@husky.neu.edu</p>
         </div>
     </div>
     <footer id="footer" class="navbar-fixed-bottom">
