--- a/animations.html
+++ b/animations.html
@@ -64,6 +64,7 @@
 
 <html>
 <head>
+    <title>[YK] - Animations</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,    maximum-scale=1, user-scalable=no">
     </meta>
