--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <html>
 <head>
+    <title>[YK] - Home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
     </meta>
