--- a/p5Stuff.html
+++ b/p5Stuff.html
@@ -23,6 +23,8 @@
         padding-bottom: 10px;
         position: relative;
         overflow: auto;
+        transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
     }
 
     p {
@@ -76,6 +78,7 @@
 
 <html>
 <head>
+    <title>[YK] - p5.js Stuff</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,    maximum-scale=1, user-scalable=no">
     </meta>
