--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
 
 <html>
 <head>
+    <title>[YK] - Porfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,    maximum-scale=1, user-scalable=no">
     </meta>
