p5.js sketch update

--- a/p5Stuff.html
+++ b/p5Stuff.html
@@ -23,8 +23,6 @@
         padding-bottom: 10px;
         position: relative;
         overflow: auto;
-        transform: translate3d(0, 0, 0);
-        -webkit-transform: translate3d(0, 0, 0);
     }
 
     p {
@@ -74,11 +72,16 @@
         padding-bottom: 9%;
     }
 
+    #waveCanvas {
+        transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+    }
+
 </style>
 
 <html>
 <head>
-    <title>[YK] - p5.js Stuff</title>
+    <title>[YK] - p5.js</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,    maximum-scale=1, user-scalable=no">
     </meta>
