--- a/p5Stuff.html
+++ b/p5Stuff.html
@@ -147,8 +147,8 @@
             </div>
             <div class="row">
                 <div id="descrpFace" class="col-xl-3 col-md-8 col-xs-12">
-                    <p>Randomly placed faces generated based on the x and y position of the mouse. 
-                       Move the mouse aorund to make some shapes</p>
+                    <p>Randomly placed polygons with faces generated based on the x and y position of the mouse. 
+                       Move the mouse around to make some shapes.</p>
                 </div>
                 <div class="col-md-4 hidden-xs"></div>
             </div>
