--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 
+<link rel="icon" href="ebiCON.png" type="image/x-icon" />
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap" rel="stylesheet">
@@ -41,10 +42,10 @@
                 </div>
                 <div class="subHead" align="left">
                     <div class="row" id="aboutMe">
-                      <p><a href="aboutMe.html"><i>about</i></a></p>
+                      <p><a href="aboutMe"><i>about</i></a></p>
                     </div>
                     <div class="row" id="portfolio">
-                      <p><a href="portfolio.html"><i>portfolio</i></a></p>
+                      <p><a href="portfolio"><i>portfolio</i></a></p>
                     </div>
                 </div>
             </div>
