--- a/p5Stuff.html
+++ b/p5Stuff.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <!-- scripts -->
-<script src="three.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
 <script src="redWave.js"></script>
 <script src="facesPort.js"></script>
 
-<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=DM+Serif+Display&display=swap" rel="stylesheet">
+<link rel="icon" href="ebiCON.png" type="image/x-icon" />
 <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap" rel="stylesheet">
 <link type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 </link>
