--- a/p5Stuff.html
+++ b/p5Stuff.html
@@ -121,7 +121,7 @@
                     <p>In the process of learning p5.js, one of the first visually appealing sketches I made was a sin wave visualization.
                        The sketch draws circles along a sin wave while gradually changing color! The above visualization is embedded p5.js and 
                        I've included a few more versions below as gifs,
-                       because drawing thousands circles can get pretty laggy.</p>
+                       because drawing thousands of circles can get pretty laggy.</p>
                 </div>
                 <div class="col-md-4 hidden-xs"></div>
             </div>
