Aspect ratio changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
        
         <div class="row" id="contentWrapper" align="center">
-            <div class="col-md-2 col-xs-2" id="sideBar">
+            <div class="col-md-2 col-lg-1 col-xs-2" id="sideBar">
                 <div class="row" align="left">
                     <h1 id="name">Yikai Kuo</h1>
                 </div>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-8 col-xs-10" id="canvasDiv" align="left">
+            <div class="col-md-8 col-lg-8 col-xs-10" id="canvasDiv" align="left">
                 <canvas id="c"></canvas>
             </div>
         </div>
