Aspect ratio changes

--- a/animations.html
+++ b/animations.html
@@ -90,8 +90,8 @@
         <div class="content">
             <!-- animation gif dump, first animation -->
             <div class="row anim">
-                <h1>Animation Dump</h1>
-                <h3>(will organize)</h3>
+                <h1>Animation</h1>
+                <h3><em>Drawn and animated in Adobe Flash</em></h3>
                 <div class="col-lg-3 col-md-4 col-xs-12">
                     <img src="outlinePoke.gif" />
                 </div>
