--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                       <p><a href="aboutMe"><i>about</i></a></p>
                     </div>
                     <div class="row" id="portfolio">
-                      <p><a href="portfolio"><i>portfolio</i></a></p>
+                      <p><a href="portfolio"><i>work</i></a></p>
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
             </div>
         </div>
         <footer id="footer" class="navbar-fixed-bottom">
-                <div class="footer-copyright text-center">Yikai Kuo 2019</div>
+                <div class="footer-copyright text-center">© Yikai Kuo 2019</div>
         </footer>
     </div>
     
