--- a/Typography/index.html
+++ b/Typography/index.html
@@ -16,9 +16,10 @@
 <link type="text/css" href="typeCSS.css" rel="stylesheet"  ></link>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></link>
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>we typin boi</title>
 <html>
 <head>
+  <title>we typin boi</title>
+  <link rel="icon" href="./ebiCON.png" type="image/x-icon" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
 </head>
