--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </div>
        
         <div class="row" id="contentWrapper" align="center">
+            <div class="col-md-3"></div>
             <div class="col-md-2 col-lg-1 col-xs-2" id="sideBar">
                 <div class="row" align="left">
                     <h1 id="name">Yikai Kuo</h1>
