--- a/Typography/index.html
+++ b/Typography/index.html
@@ -32,7 +32,7 @@
   <div class="container">
     <div class="row">
         <div class="col-xs-0 col-md-1 col-lg-2"></div>
-        <div id="sketch" class="col-xs-12 col-md-10 col-lg-8"></div>
+        <div id="sketch" touch-action="none" class="col-xs-12 col-md-10 col-lg-8"></div>
         <div class="col-xs-0 col-md-1 col-lg-2"></div>
     </div>
     <p>John Kane's: a <strong>type</strong> primer.</p>
