--- a/Typography/index.html
+++ b/Typography/index.html
@@ -18,7 +18,7 @@
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <html>
 <head>
-  <title>we typin boi</title>
+  <title>Intro to Type</title>
   <link rel="icon" href="./ebiCON.png" type="image/x-icon" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
@@ -35,7 +35,8 @@
         <div id="sketch" touch-action="none" class="col-xs-12 col-md-10 col-lg-8"></div>
         <div class="col-xs-0 col-md-1 col-lg-2"></div>
     </div>
-    <p>John Kane's: a type primer.</p>
+    <p>an interactive introduction to Typography <br> 
+       with John Kane's <i>a type primer</i></p>
   </div>
     <script src="./index.js"></script>
 </body>
