--- a/Typography/index.html
+++ b/Typography/index.html
@@ -37,6 +37,8 @@
     </div>
     <p>an interactive introduction to Typography <br> 
        with John Kane's <i>a type primer</i></p>
+    <p>please use chrome, p5.js may have issues on safari/mobile</p>
+
   </div>
     <script src="./index.js"></script>
 </body>
