--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <!-- scripts -->
+<p>not yet</p>
+<!--
 <script src="three.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
@@ -60,4 +62,5 @@
 </body>
 </html>
 <script src="meJS.js"></script>
+-->
 
