--- a/aboutMe.html
+++ b/aboutMe.html
@@ -123,8 +123,8 @@
             <div id="sep"></div>
             <p id="descrp">A Northeastern University student working towards a <em>BS in <strong>Biology</strong> and 
             minor in <strong>Computer Science</strong></em>.</p>
-            <p id="interests">I'm currently channeling my background in hand-drawn character animation towards learning <em>design/UI/UX</em>. I also dabble in <em>gene editing</em>, and have worked with two different gene editing teams
-                at <strong>Editas Medicine</strong> and <strong>bluebird bio</strong>.</p>
+            <p id="interests">Currently channeling my background in hand-drawn character animation towards learning <em>design/UI/UX</em>. I also dabble in <em>gene editing</em>, and have worked with two different gene editing teams.
+                at <strong><a href="https://editasmedicine.com/">Editas Medicine</strong></a> and <strong><a href="https://www.bluebirdbio.com/">bluebird bio</strong></a>.</p>
             <p id="contact"><a href="https://www.linkedin.com/in/yikai-kuo-90174a126/" target="_blank"><u>linkedin</u></a> // <a href="https://github.com/KwhoaKai" target="_blank"><u>github</u></a> // kuo.e@husky.neu.edu</p>
         </div>
     </div>
