--- a/aboutMe.html
+++ b/aboutMe.html
@@ -123,8 +123,7 @@
             <div id="sep"></div>
             <p id="descrp">A Northeastern University student working towards a BS in <strong>Biology</strong> and 
             minor in <strong>Computer Science</strong>.</p>
-            <p id="interests">Currently channeling my background in hand-drawn character animation towards learning design/UI/UX. I also dabble in <em>gene editing</em>, and have worked with two different gene editing teams
-                at <strong><u><a href="https://editasmedicine.com/">Editas Medicine</a></u></strong> and <strong><u><a href="https://www.bluebirdbio.com/">bluebird bio</a></u></strong>.</p>
+            <p id="interests">Currently channeling my background in hand-drawn character animation towards learning design/UI/UX. I also dabble in <em>gene editing</em>, and have completed 6-month coops at <u><a href="https://editasmedicine.com/">Editas Medicine</a></u> and <u><a href="https://www.bluebirdbio.com/">bluebird bio</a></u>.</p>
             <p id="contact"><a href="https://www.linkedin.com/in/yikai-kuo-90174a126/" target="_blank"><u>linkedin</u></a> // <a href="https://github.com/KwhoaKai" target="_blank"><u>github</u></a> // kuo.e@husky.neu.edu</p>
         </div>
     </div>
