--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="-1" />
+    <script>
+        $(document).ready(function() {
+            $("#wholeBody").hide().removeClass("hidden").fadeIn(300);
+        });
+    </script>
 </head>
 <body>
-    <div class="container-fluid contAll">
+    <div class="container-fluid contAll hidden">
 
             <div id="headDiv">
                 <a href= "www.yikaikuo.com">
