--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </script>
 </head>
 <body>
-    <div class="container-fluid contAll hidden">
+    <div class="container-fluid contAll hidden" id="wholeBody">
 
             <div id="headDiv">
                 <a href= "www.yikaikuo.com">
