--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,11 @@
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="-1" />
+    <script>
+        $(document).ready(function() {
+            $("#choiceId").hide().removeClass("hidden").fadeIn(300);
+        });
+    </script>
 <style>
     html,body { 
         height:100%;
@@ -105,7 +110,7 @@
                 </a>
             </div>
 
-        <div id="choiceId" class="row choiceClass">
+        <div id="choiceId" class="row choiceClass hidden">
            
                 <div id="p5" class="pointer col-xs-12 col-md-4" onclick="location.href='p5Stuff'">
                     <p id="animText" class="titleText align-middle" >p5.js doodles</p>
