--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
 </style>
 <script>
     $(document).ready(function() {
-        $("#choiceId").hide().fadeIn(450);
+        $("#choiceId").hide().removeClass("hidden").fadeIn(300);
     });
 </script>
 </head>
