--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                       <p><a href="aboutMe"><i>about</i></a></p>
                     </div>
                     <div class="row" id="portfolio">
-                      <p><a href="portfolio"><i>portfolio</i></a></p>
+                      <p><a href="portfolio"><i>work</i></a></p>
                     </div>
                 </div>
             </div>
