--- a/index.html
+++ b/index.html
@@ -50,17 +50,16 @@
                 </div>
                 <!-- sub headings -->
                 <div class="subHead text-justify-change">
-                    <div class="row" id="aboutMe">  
-                      <p><a href="aboutMe"><i>about</i></a></p>
-                    </div>
-                    <div class="row" id="portfolio">
-                      <p><a href="work"><i>work</i></a></p>
-                    </div>
+                    <a href="aboutMe"><div class="row" id="aboutMe">  
+                      <p><i>about</i></p>
+                    </div></a>
+                    <a href="work"><div class="row" id="portfolio">
+                      <p><a href="work"><i>work</i></p>
+                    </div></a>
                 </div>
             </div>
             <!-- p5 canvas -->
             <div class="col-md-5 col-xs-12" id="typeDiv" align="left"></div>
-            
         </div>
         </div>
         <footer id="footer" class="navbar-fixed-bottom">
