--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                       <p><i>about</i></p>
                     </div></a>
                     <a href="work"><div class="row" id="portfolio">
-                      <p><a href="work"><i>work</i></p>
+                      <p><i>work</i></p>
                     </div></a>
                 </div>
             </div>
