--- a/animations.html
+++ b/animations.html
@@ -8,6 +8,7 @@
 <link type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 </link>
 <link type="text/css" href="meStyle.css" rel="stylesheet"></link>
+<link rel="icon" href="ebiCON.png" type="image/x-icon" />
 
 <style>
     html, body {
@@ -90,8 +91,7 @@
         <div class="content">
             <!-- animation gif dump, first animation -->
             <div class="row anim">
-                <h1>Animation</h1>
-                <h3><em>Drawn and animated in Adobe Flash</em></h3>
+                <h3>Animation dump...</h3>
                 <div class="col-lg-3 col-md-4 col-xs-12">
                     <img src="outlinePoke.gif" />
                 </div>
