--- a/index.html
+++ b/index.html
@@ -50,12 +50,16 @@
                 </div>
                 <!-- sub headings -->
                 <div class="subHead text-justify-change">
-                    <a href="aboutMe"><div class="row" id="aboutMe">  
-                      <p><i>about</i></p>
-                    </div></a>
-                    <a href="work"><div class="row" id="portfolio">
-                      <p><i>work</i></p>
-                    </div></a>
+                    <a href="aboutMe">
+                        <div class="row" id="aboutMe">  
+                            <p><i>about</i></p>
+                        </div>
+                    </a>
+                    <a href="work">
+                        <div class="row" id="portfolio">
+                            <p><i>work</i></p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <!-- p5 canvas -->
