--- a/work.html
+++ b/work.html
@@ -13,6 +13,7 @@
 <html>
 <head>
     <title>[YK] - Work</title>
+    <link rel="icon" href="ebiCON.png" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,    maximum-scale=1, user-scalable=no">
     </meta>
