--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         </div>
         <footer id="footer" class="navbar-fixed-bottom">
-                <div class="footer-copyright text-center">Yikai Kuo 2019</div>
+                <div class="footer-copyright text-center">Yikai Kuo © 2019</div>
         </footer>
     </div>
     
