--- a/p5Stuff.html
+++ b/p5Stuff.html
@@ -165,7 +165,7 @@
 
 
     <footer id="footer" class="navbar-fixed-bottom">
-        <div class="footer-copyright text-center">Yikai Kuo 2019</div>
+        <div class="footer-copyright text-center">Yikai Kuo © 2019</div>
     </footer>
 </body>
 </html>
