--- a/animations.html
+++ b/animations.html
@@ -94,10 +94,10 @@
             <div class="row anim">
                 <h3>Animation dump...</h3>
                 <div class="col-lg-3 col-md-4 col-xs-12">
-                    <img src="outlinePoke.gif" />
+                    <img src="/Animation-Gifs/outlinePoke.gif" />
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-12">
-                    <img src="comparePoke.gif" />
+                    <img src="/Animation-Gifs/comparePoke.gif" />
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-12">
                     <img src="https://66.media.tumblr.com/6be98caf3314dbb0eece43d6c8ab471d/tumblr_ndf0figX551tk9o89o1_640.gifv" />
@@ -106,21 +106,21 @@
             </div>
             <div class="row anim">
                 <div class="col-lg-3 col-md-4 col-xs-12">
-                    <img src="jump.gif" />
+                    <img src="/Animation-Gifs/jump.gif" />
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-12">
-                    <img src="ebiJump.gif" />
+                    <img src="/Animation-Gifs/ebiJump.gif" />
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-12">
-                    <img src="squash.gif" />
+                    <img src="/Animation-Gifs/squash.gif" />
                 </div>
             </div>
              <div class="row anim">
                 <div class="col-lg-3 col-md-4 col-xs-12">
-                    <img src="noGIF.gif" />
+                    <img src="/Animation-Gifs/noGIF.gif" />
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-12">
-                    <img src="boxy.gif" />
+                    <img src="/Animation-Gifs/boxy.gif" />
                 </div>
             </div>
             
