--- a/p5Stuff.html
+++ b/p5Stuff.html
@@ -128,13 +128,13 @@
             </div>
             <div class="row" id="moreWaves">
                 <div class="col-md-3 col-xs-12">
-                    <img class="waveGIF" src="blueWaveGIF.gif" />
+                    <img class="waveGIF" src="/p5Stuff-Resources/blueWaveGIF.gif" />
                 </div>
                 <div class="col-md-3 col-xs-12">
-                    <img class="waveGIF" src="greenWaveGif.gif" />
+                    <img class="waveGIF" src="/p5Stuff-Resources/greenWaveGif.gif" />
                 </div>
                 <div class="col-md-3 col-xs-12">
-                    <img class="waveGIF" src="pinkishWaveGif.gif" />
+                    <img class="waveGIF" src="/p5Stuff-Resources/pinkishWaveGif.gif" />
                 </div>
             </div>
 
