--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
     #p5 {   
         background-color: powderblue;
         background-position: center bottom;
-        background-image: url("blueWaveGIF.gif");
+        background-image: url("/p5Stuff-Resources/blueWaveGIF.gif");
         background-size: 85%;
         cursor: pointer;
     }
