--- a/p5Stuff.html
+++ b/p5Stuff.html
@@ -47,7 +47,7 @@
             <!-- first p5 canvas -->
             <div id="title">
                 <h1>p5.js sketches</h1>
-                <h3>Sin Waves</h3>
+                <h3>Sine Waves</h3>
             </div>
             <div class="row">
                 <div id="waveCanvas" class="col-xl-8 col-md-6 col-xs-12"></div>
