--- a/aboutMe.html
+++ b/aboutMe.html
@@ -56,7 +56,7 @@
                         <div id="sep"></div>
                         <p id="descrp">A Northeastern University student working towards a BS in <strong>Biology</strong> and
                             minor in <strong>Computer Science</strong>.</p>
-                        <p id="interests">Currently channeling my background in hand-drawn character animation towards learning design/UI/UX. I also dabble in <em>gene editing</em>, and have completed 6-month coops at <u><a href="https://editasmedicine.com/">Editas Medicine</a></u> and <u><a href="https://www.bluebirdbio.com/">bluebird bio,</a></u> studying DNA damage repair and in-vivo strategies.</p>
+                        <p id="interests">Background in character animation, interested in design, data science, and gene editing. I've completed 6-month coops at <u><a href="https://editasmedicine.com/">Editas Medicine</a></u> and <u><a href="https://www.bluebirdbio.com/">bluebird bio,</a></u> studying DNA damage repair and in-vivo strategies.</p>
                         <p id="contact"><a href="https://www.linkedin.com/in/yikai-kuo-90174a126/" target="_blank"><u>linkedin</u></a> // <a href="https://github.com/KwhoaKai" target="_blank"><u>github</u></a> // kuo.e@husky.neu.edu</p>
                     </div>
                     <div class="col-md-2 hidden-xs"></div>
