Figure drawing added

--- a/figures.html
+++ b/figures.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>[YK] - Animations</title>
+    <title>[YK] - Figure Drawing</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
@@ -11,7 +11,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </link>
     </link>
-    <link type="text/css" href="animationCss.css" rel="stylesheet">
+    <link type="text/css" href="figureCss.css" rel="stylesheet">
     </link>
     <link rel="icon" href="ebiCON.png" type="image/x-icon" />
     <meta charset="utf-8">
@@ -42,35 +42,28 @@
         </div>
 
         <div id="content" class="hidden">
-            <!-- animation gif dump, first animation -->
-            <div class="row anim">
+            <!-- Figure drawing thumbnails -->
+            <div class="row drawing">
                 <div class="col-lg-4 col-md-4 col-xs-12">
-                    <img src="/Animation-Gifs/outlinePoke.gif" />
+                    <img src="/figure-Resources/profile3Small.jpg" />
                 </div>
                 <div class="col-lg-4 col-md-4 col-xs-12">
-                    <img src="/Animation-Gifs/comparePoke.gif" />
+                    <img src="/figure-Resources/profile2Small.jpg" />
                 </div>
                 <div class="col-lg-4 col-md-4 col-xs-12">
-                    <img src="https://66.media.tumblr.com/6be98caf3314dbb0eece43d6c8ab471d/tumblr_ndf0figX551tk9o89o1_640.gifv" />
-                </div>
-            </div>
-            <div class="row anim">
-                <div class="col-lg-4 col-md-4 col-xs-12">
-                    <img src="/Animation-Gifs/jump.gif" />
-                </div>
-                <div class="col-lg-4 col-md-4 col-xs-12">
-                    <img src="/Animation-Gifs/ebiJump.gif" />
-                </div>
-                <div class="col-lg-4 col-md-4 col-xs-12">
-                    <img src="/Animation-Gifs/squash.gif" />
+                    <img src="/figure-Resources/profile1Small.jpg" />
                 </div>
             </div>
-            <div class="row anim">
+
+            <div class="row drawing">
                 <div class="col-lg-4 col-md-4 col-xs-12">
-                    <img src="/Animation-Gifs/noGIF.gif" />
+                    <img src="/figure-Resources/layered.jpg" />
                 </div>
                 <div class="col-lg-4 col-md-4 col-xs-12">
-                    <img src="/Animation-Gifs/boxy.gif" />
+                    <img src="/figure-Resources/crosslegSmall.jpg" />
+                </div>
+                <div class="col-lg-4 col-md-4 col-xs-12">
+                    <img src="/figure-Resources/seatBackFigureSmall.jpg" />
                 </div>
             </div>
         </div>
