--- a/work.html
+++ b/work.html
@@ -48,9 +48,9 @@
             <div id="animations" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='animations'">
                 <p class="titleText align-middle">animations</p>
             </div>
-           <!--  <div id="animations" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='animations'">
-                <p class="titleText align-middle">figure work</p>
-            </div> -->
+            <div id="figures" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='figures'">
+                <p id="figureText" class="titleText align-middle">figure work</p>
+            </div>
         </div>
         <footer id="footer" class="fixed-bottom">
             <div class="footer-copyright text-center">Yikai Kuo © 2019</div>
