--- a/work.html
+++ b/work.html
@@ -42,7 +42,7 @@
         </div>
 
         <div id="choiceId" class="row hidden">
-            <div id="p5" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='p5Stuff'">
+            <div id="p5" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='p5sketches'">
                 <p id="animText" class="titleText align-middle">p5.js doodles</p>
             </div>
             <div id="animations" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='animations'">
