Change font size
- Smaller font size in about me description

--- a/aboutme.html
+++ b/aboutme.html
@@ -56,7 +56,8 @@
                         <div id="sep"></div>
                         <p id="descrp">A Northeastern University student working towards a BS in <strong>Biology</strong> and
                             minor in <strong>Computer Science</strong>.</p>
-                        <p id="interests">Background in character animation, interested in design, data science, and gene editing. I've completed 6-month coops at <u><a href="https://editasmedicine.com/">Editas Medicine</a></u> and <u><a href="https://www.bluebirdbio.com/">bluebird bio</a></u> studying DNA damage repair and in-vivo gene editing strategies, respectively.</p>
+                        <p id="interests">Interested in gene editing, bioinformatics, and design, with a background in character animation. 
+                            I've completed two six month coops at <u><a href="https://editasmedicine.com/">Editas Medicine</a></u> and <u><a href="https://www.bluebirdbio.com/">bluebird bio</a></u> studying DNA damage repair and in-vivo gene editing strategies, respectively.</p>
                         <p id="contact"><a href="https://www.linkedin.com/in/yikai-kuo-90174a126/" target="_blank"><u>linkedin</u></a> // <a href="https://github.com/KwhoaKai" target="_blank"><u>github</u></a> // kuo.e@husky.neu.edu</p>
                     </div>
                     <div class="col-md-2 hidden-xs"></div>
