Add page about Grailed scraper
- Additional work page about the grailed scraper

- Added meta description to index page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta name="description" content="Yikai Kuo is an undergraduate student at Northeastern University with a passion for gene editing, bioinformatics, and design. 
+    This is his personal website. Welcome welcome."/>
     <title>[YK] - Home</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
