--- a/work.html
+++ b/work.html
@@ -42,6 +42,9 @@
         </div>
 
         <div id="choiceId" class="row hidden">
+            <div id="grailed" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='grailed'">
+                <p id="animText" class="titleText align-middle">grailed scraper</p>
+            </div>
             <div id="p5" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='p5sketches'">
                 <p id="animText" class="titleText align-middle">p5.js doodles</p>
             </div>
