Typos + about me
- fixed typos on Grailed page
- links on about me page don't force open new windows anymore

--- a/grailed.html
+++ b/grailed.html
@@ -86,7 +86,7 @@
                     <p>
                         Time to make an unsanctioned scraper of my own. There are a number of technologies 
                         that exist for web scraping such as Beautiful Soup, Scrapy, and Selenium. I ultimately settled 
-                        on Selenium because Grailed delivers content through Javascript and lazyloads their images, 
+                        on Selenium because Grailed delivers content through JavaScript and lazyloads their images, 
                         and Selenium allows for interaction with the DOM. The URLs for every listing photo includes 
                         parameters for width, height, and fit, so we can use this to download photos at whatever 
                         dimension we want.
