--- a/work.html
+++ b/work.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>[YK] - Work</title>
+    <meta name="description" content="Yikai Kuo is an undergraduate student at Northeastern University with a passion for gene editing, bioinformatics, and design. 
+    This is some of his work. Welcome welcome."/>
     <link rel="icon" href="ebiCON.png" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
