--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <!-- sub headings -->
                     <div class="subHead">
-                        <a href="aboutme.html">
+                        <a href="aboutme">
                             <div class="row" id="aboutMe">
                                 <div class="col-12">
                                     <p><i>about</i></p>
