Inline video play
- iOS autoplay compatibility
- Fix meta description tags

--- a/grailed.html
+++ b/grailed.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>[YK] - Grailed.py</title>
+    <title>Grailed Scraper - Yikai Kuo</title>
     <meta charset="utf-8">
+    <meta name="description" content="I built a web scraper for scraping images off of Grailed.com. Download thousands of images
+    at whatever dimensions you want."/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </meta>
     <meta http-equiv="cache-control" content="no-cache" />
@@ -47,7 +49,7 @@
 
             <!-- Closet video -->
             <div id="vidDiv">
-            <video autoplay muted loop id="closetVideo">
+            <video playsinline autoplay muted loop id="closetVideo">
                 <source src="/Animation-Gifs/sweater_matrix.mp4" type="video/mp4">
               </video>
               <p class="imgDescrp">Tour of my virtual closet (p5js)</p>
