--- a/p5sketches.html
+++ b/p5sketches.html
@@ -3,7 +3,8 @@
 
 <head>
     <base href="/" />
-    <title>[YK] - p5.js</title>
+    <meta name="description" content="p5 doodles by Yikai Kuo."/>
+    <title>p5 sketches - Yikai Kuo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </meta>
@@ -63,13 +64,13 @@
             </div>
             <div class="row" id="moreWaves">
                 <div class="col-md-4 col-xs-12">
-                    <img class="waveGIF" src="/p5Stuff-Resources/blueWaveGIF.gif" />
+                    <img class="waveGIF" src="/p5Stuff-Resources/blueWaveGIF.gif" alt="blue sin wave"/>
                 </div>
                 <div class="col-md-4 col-xs-12">
-                    <img class="waveGIF" src="/p5Stuff-Resources/greenWaveGif.gif" />
+                    <img class="waveGIF" src="/p5Stuff-Resources/greenWaveGif.gif" alt="green sin wave"/>
                 </div>
                 <div class="col-md-4 col-xs-12">
-                    <img class="waveGIF" src="/p5Stuff-Resources/pinkishWaveGif.gif" />
+                    <img class="waveGIF" src="/p5Stuff-Resources/pinkishWaveGif.gif" alt="pinkish sin wave"/>
                 </div>
             </div>
 
