--- a/animations.html
+++ b/animations.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <title>[YK] - Animations</title>
+    <title>Animations - Yikai Kuo</title>
+    <meta name="description" content="Animations by Yikai Kuo, an undergarduate student at Northeastern University studying Biology and Computer Science."/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script> 
 
