--- a/figures.html
+++ b/figures.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <title>[YK] - Figure Drawing</title>
+    <title>Figure Drawing - Yikai Kuo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
-
+    <meta name="description" content="Assorted figure drawings by Yikai Kuo. All work used live models with poses ranging from 10 minutes to several hours."/>
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </link>
