--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta name="description" content="Yikai Kuo is an undergraduate student at Northeastern University with a passion for gene editing, bioinformatics, and design. 
-    This is his personal website. Welcome welcome."/>
-    <title>[YK] - Home</title>
+    <meta name="description" content="Yikai Kuo is a biologist with a passion for gene editing, bioinformatics and art. This is his personal site, welcome welcome!  :)"/>
+    <title>Yikai Kuo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
