--- a/work.html
+++ b/work.html
@@ -2,9 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>[YK] - Work</title>
-    <meta name="description" content="Yikai Kuo is an undergraduate student at Northeastern University with a passion for gene editing, bioinformatics, and design. 
-    This is some of his work. Welcome welcome."/>
+    <title>Work - Yikai Kuo</title>
+    <meta name="description" content="Yikai Kuo is a biologist with a passion for gene editing, bioinformatics and art. This is his personal site, welcome welcome!  :)"/>
     <link rel="icon" href="ebiCON.png" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
